added last object in json
added averageGrade to last object in json file

--- a/documentation/milepael2/components/components.jsonc
+++ b/documentation/milepael2/components/components.jsonc
@@ -55,7 +55,8 @@
     "alcoholConsumption": {
         "weekendAlcoholConsumption": [1, 2, 3, 4, 5],
         "weekdayAlcoholConsumption": [1, 2, 3, 4, 5]
-    }
+    },
+    "averageGrade": [12, 14, 11, 8, 7]
     
 }
 
